# tauri-app

./: .gitignore  README.md  index.html
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  hotkey.rs  indexer.rs  lib.rs  state.rs  windows_utils.rs
src/components/: LauncherWindow.tsx  ResultList.tsx  SearchBar.tsx  SettingsWindow.tsx  Toast.tsx
src/constants/: events.ts  modes.ts
src/state/: launcherReducer.ts
src/styles/: base.css  theme-dark.css
src/utils/: fallbackIcon.ts
xtask/src/: main.rs
