[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
base64 = "0.22"
urlencoding = "2"
image = { version = "0.24", default-features = false, features = ["png"] }
sha1 = "0.10"
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_Graphics_Gdi",
    "Win32_System_Environment",
    "ApplicationModel",
    "ApplicationModel_Core",
    "Management_Deployment",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }
log = "0.4"
